--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
         "vscode-icons-team.vscode-icons",
         "github.vscode-github-actions",
         "github.copilot",
-        "github.copilot-chat"
+        "github.copilot-chat",
+        "heaths.vscode-guid"
     ]
 }
