--- a/.github/workflows/on-pr-merge.yml
+++ b/.github/workflows/on-pr-merge.yml
@@ -25,7 +25,7 @@ jobs:
           path: dist
 
       - name: List content
-        runs: ls -al dist
+        run: ls -al dist
       
       - name: Dump ping file
-        runs: cat dist/pingfile.txt
+        run: cat dist/pingfile.txt
