--- a/.github/workflows/on-pr-merge.yml
+++ b/.github/workflows/on-pr-merge.yml
@@ -41,7 +41,7 @@ jobs:
         with:
           run-id: ${{ steps.find-run.outputs.run_id }}
           name: dist
-          path: dist
+          path: ./dist
 
       - name: List content
         run: ls -al ./
