--- a/.github/workflows/on-manual-trigger.yml
+++ b/.github/workflows/on-manual-trigger.yml
@@ -45,7 +45,7 @@ jobs:
           echo -e "\033[33;1;4mDump strategy context\033[0m"
           echo -e "$STRATEGY_CONTEXT\n"
         
-      - uses: actions/github-script@v6
+      - uses: actions/github-script@v7
         name: Dump context
         with:
           script: |
@@ -53,14 +53,14 @@ jobs:
 
       - id: find-run # ID used to ref outputs later
         name: Find run
-        uses: actions/github-script@v6
+        uses: actions/github-script@v7
         with:
           script: |
             const runs = await github.rest.actions.listWorkflowRuns({
               owner: context.repo.owner,
               repo: context.repo.repo,
               workflow_id: 'on-pr-open.yml',
-              branch: context.payload.pull_request.head.ref,
+              branch: context.payload.ref,
               status: 'success',
               per_page: 1
             });
