--- a/.github/workflows/on-pr-merge.yml
+++ b/.github/workflows/on-pr-merge.yml
@@ -18,6 +18,12 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/github-script@v7
+        name: Dump context
+        with:
+          script: |
+            console.log(JSON.stringify(context))
+            
       - id: find-run
         uses: actions/github-script@v7
         with:
