--- a/.github/workflows/on-manual-trigger.yml
+++ b/.github/workflows/on-manual-trigger.yml
@@ -59,13 +59,13 @@ jobs:
             const runs = await github.rest.actions.listWorkflowRuns({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              workflow_id: 'on-pr-open.yml',
+              workflow_id: 'on-pr-change.yml',
               branch: context.ref.replace("refs/heads/", ""),
               status: 'success',
               per_page: 1
             });
             if (runs.data.workflow_runs.length === 0) {
-              throw new Error('No successful runs found for on-pr-open workflow');
+              throw new Error('No successful runs found for on-pr-change workflow');
             }
             console.log(`Last successful run id: ${runs.data.workflow_runs[0].id}`);
             return runs.data.workflow_runs[0].id;
