Continue on error

--- a/.github/workflows/on-manual-trigger.yml
+++ b/.github/workflows/on-manual-trigger.yml
@@ -72,6 +72,7 @@ jobs:
 
       - name: Download manually
         uses: actions/github-script@v7
+        continue-on-error: true
         with:
           script: |
             const allArtifacts = await github.rest.actions.listWorkflowRunArtifacts({
