--- a/.github/workflows/on-manual-trigger.yml
+++ b/.github/workflows/on-manual-trigger.yml
@@ -73,12 +73,14 @@ jobs:
       - name: Download manually
         uses: actions/github-script@v7
         continue-on-error: true
+        env:
+          OTHER_WORKFLOW_RUN_ID: ${{ steps.find-run.outputs.run_id }}
         with:
           script: |
             const allArtifacts = await github.rest.actions.listWorkflowRunArtifacts({
                owner: context.repo.owner,
                repo: context.repo.repo,
-               run_id: ${{ steps.find-run.outputs.run_id }},
+               run_id: process.env.OTHER_WORKFLOW_RUN_ID,
             });
 
             console.log(JSON.stringify(allArtifacts))
