--- a/.github/workflows/on-manual-trigger.yml
+++ b/.github/workflows/on-manual-trigger.yml
@@ -73,14 +73,26 @@ jobs:
       - name: Download manually
         uses: actions/github-script@v7
         continue-on-error: true
-        env:
-          OTHER_WORKFLOW_RUN_ID: ${{ steps.find-run.outputs.run_id }}
         with:
           script: |
+            const runs = await github.rest.actions.listWorkflowRuns({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: 'on-pr-change.yml',
+              branch: context.ref.replace("refs/heads/", ""),
+              status: 'success',
+              per_page: 1
+            });
+            if (runs.data.workflow_runs.length === 0) {
+              throw new Error('No successful runs found for on-pr-change workflow');
+            }
+            console.log(`Last successful run id: ${runs.data.workflow_runs[0].id}`);
+            const runId = runs.data.workflow_runs[0].id;
+            
             let data = {
               owner: context.repo.owner,
               repo: context.repo.repo,
-              run_id: process.env.OTHER_WORKFLOW_RUN_ID,
+              run_id: runId,
             }
             console.log({data})
             const allArtifacts = await github.rest.actions.listWorkflowRunArtifacts(data);
