--- a/.github/workflows/on-pr-merge.yml
+++ b/.github/workflows/on-pr-merge.yml
@@ -1,8 +1,9 @@
 name: On PR Merge
 run-name: on-pr-merge-${{ github.head_ref }}
 
-# Runs on every change in a pull request, even draft requests
+# Runs when any pr is closed and merged to main as well as manually triggered if needed
 on:
+  workflow_dispatch:
   pull_request:
     types: [closed]
     branches: # Trigger only if the PR targets main (remove these two lines to trigger on all PRs)
@@ -57,7 +58,6 @@ jobs:
 
       - name: Download manually
         uses: actions/github-script@v7
-        continue-on-error: true
         env:
           WORKFLOW_ID: "on-pr-change.yml"
           ARTIFACT_NAME: "dist"
@@ -65,13 +65,14 @@ jobs:
           script: |
             const workflowId = process.env.WORKFLOW_ID
             const artifactName = process.env.ARTIFACT_NAME
-            console.log({workflowId, artifactName})
+            const branch = context.head_ref
+            console.log({workflowId, artifactName, branch})
             
             const runs = await github.rest.actions.listWorkflowRuns({
               owner: context.repo.owner,
               repo: context.repo.repo,
               workflow_id: workflowId,
-              branch: context.ref.replace("refs/heads/", ""),
+              branch,
               status: 'success',
               per_page: 1
             });
