--- a/.github/workflows/on-pr-close.yml
+++ b/.github/workflows/on-pr-close.yml
@@ -1,5 +1,6 @@
-name: On PR Merge
-run-name: on-pr-merge-${{ github.head_ref }}
+name: On PR Close
+run-name: on-pr-close-${{ github.head_ref || github.ref_name }}
+# head_ref works when triggered by PR, ref_name works when triggered manually
 
 # Runs when any pr is closed and merged to main as well as manually triggered if needed
 on:
@@ -16,6 +17,7 @@ concurrency:
 
 jobs:
   deploy:
+    # Only run if merged
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
@@ -65,14 +67,18 @@ jobs:
           script: |
             const workflowId = process.env.WORKFLOW_ID
             const artifactName = process.env.ARTIFACT_NAME
-            const branch = context.head_ref
-            console.log({workflowId, artifactName, branch})
+            const branchName = context.head_ref
+            
+            console.log({workflowId, artifactName, branchName})
+            if (!workflowId || !artifactName || !branchName) {
+              throw new Error('workflowId, artifactName or branchName not defined');
+            }
             
             const runs = await github.rest.actions.listWorkflowRuns({
               owner: context.repo.owner,
               repo: context.repo.repo,
               workflow_id: workflowId,
-              branch,
+              branch: branchName,
               status: 'success',
               per_page: 1
             });
@@ -90,8 +96,7 @@ jobs:
             }
             console.log({data})
             const allArtifacts = await github.rest.actions.listWorkflowRunArtifacts(data);
-
-            console.log(JSON.stringify(allArtifacts))
+            console.log(JSON.stringify({allArtifacts}))
 
             const artifact = allArtifacts.data.artifacts.find((x) => x.name === artifactName)
 
