--- a/.github/workflows/on-manual-trigger.yml
+++ b/.github/workflows/on-manual-trigger.yml
@@ -60,14 +60,18 @@ jobs:
           script: |
             const workflowId = process.env.WORKFLOW_ID
             const artifactName = process.env.ARTIFACT_NAME
-            const branch = context.head_ref ?? context.ref_name
-            console.log({workflowId, artifactName, branch})
+            const branchName = context.head_ref || context.ref_name
+
+            console.log({workflowId, artifactName, branchName})
+            if (!workflowId || !artifactName || !branchName) {
+              throw new Error('workflowId, artifactName or branchName not defined');
+            }
             
             const runs = await github.rest.actions.listWorkflowRuns({
               owner: context.repo.owner,
               repo: context.repo.repo,
               workflow_id: workflowId,
-              branch,
+              branch: branchName,
               status: 'success',
               per_page: 1
             });
@@ -85,8 +89,7 @@ jobs:
             }
             console.log({data})
             const allArtifacts = await github.rest.actions.listWorkflowRunArtifacts(data);
-
-            console.log(JSON.stringify(allArtifacts))
+            console.log(JSON.stringify({allArtifacts}))
 
             const artifact = allArtifacts.data.artifacts.find((x) => x.name === artifactName)
 
