--- a/.github/workflows/on-pr-close.yml
+++ b/.github/workflows/on-pr-close.yml
@@ -67,7 +67,7 @@ jobs:
           script: |
             const workflowId = process.env.WORKFLOW_ID
             const artifactName = process.env.ARTIFACT_NAME
-            const branchName = context.head_ref ?? context.payload?.pull_request?.ref
+            const branchName = context.head_ref ?? context.payload?.pull_request?.head?.ref 
             
             console.log({workflowId, artifactName, branchName})
             if (!workflowId || !artifactName || !branchName) {
