--- a/.github/workflows/on-manual-trigger.yml
+++ b/.github/workflows/on-manual-trigger.yml
@@ -113,3 +113,13 @@ jobs:
       
       - name: Dump ping file
         run: cat dist/pingfile.txt
+
+      - name: Run if project-2 is present
+        if: ${{ hashFiles('dist/project-2') != '' }}
+        run: |
+          echo "Project-2 is present"
+
+      - name: Run if project-3 is present
+        if: ${{ hashFiles('dist/project-3') != '' }}
+        run: |
+          echo "Project-3 is present"
