--- a/.github/workflows/on-pr-close.yml
+++ b/.github/workflows/on-pr-close.yml
@@ -2,9 +2,8 @@ name: On PR Close
 run-name: on-pr-close-${{ github.head_ref || github.ref_name }}
 # head_ref works when triggered by PR, ref_name works when triggered manually
 
-# Runs when any pr is closed and merged to main as well as manually triggered if needed
+# Runs when any pr is closed and merged to main
 on:
-  workflow_dispatch:
   pull_request:
     types: [closed]
     branches: # Trigger only if the PR targets main (remove these two lines to trigger on all PRs)
