--- a/.github/workflows/on-pr-change.yml
+++ b/.github/workflows/on-pr-change.yml
@@ -14,6 +14,7 @@ concurrency:
 
 env:
   REF_BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
+  REPLACE_MY_VALUE: i-was-not-replaced
 
 jobs:
   build:
@@ -23,6 +24,18 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Required for Nx affected runs (not in use in this repo, but kept for completeness)
+
+      - name: Custom action
+        uses: ./actions/logwith
+        with:
+          invalue: Hello world
+
+      - name: Read env
+        with:
+          FOO: ${{ env.REPLACE_MY_VALUE }}
+        run: |
+          echo "FOO: $FOO"
+          echo "REPLACE_MY_VALUE: $REPLACE_MY_VALUE"
 
       # Publish the dist folder so that it can be picked up by another job
       - name: Publish dist artifacts
