--- a/.github/workflows/on-pr-change.yml
+++ b/.github/workflows/on-pr-change.yml
@@ -28,6 +28,11 @@ jobs:
       - name: Install deps
         run: npm i
 
+      - name: Setup environment
+        uses: ./actions/setEnv
+        with:
+          envFile: .env
+
       - name: Custom action
         uses: ./actions/logwith
         with:
