--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "dependencies": {
     "@actions/core": "^1.11.1",
-    "@actions/github": "^6.0.0"
+    "@actions/exec": "^1.1.1",
+    "@actions/github": "^6.0.0",
+    "dotenv": "^16.4.7"
   }
 }
